--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,30 +1,29 @@
 {% extends "base.html" %} {% block content %}
 <div class="col-md-6 offset-md-3">
   {% if user.is_authenticated %}
-  <h2>Abdullahi, Horey ayaad u soo gashey</h2>
-  {% else %}
+  <h2>Records...</h2>
+  {% if records %} {% for record in records %} {{record}} <br />
+  {% endfor %} {% endif %} {% else %}
   <h2>Login</h2>
   <form method="POST" action="{% url 'home' %}">
     {% csrf_token %}
-    <form>
-      <div class="mb-3">
-        <input
-          type="text"
-          class="form-control"
-          name="username"
-          placeholder="Username"
-        />
-      </div>
-      <div class="mb-3">
-        <input
-          type="password"
-          class="form-control"
-          name="password"
-          placeholder="Password"
-        />
-      </div>
-      <button type="submit" class="btn btn-secondary">Login</button>
-    </form>
+    <div class="mb-3">
+      <input
+        type="text"
+        class="form-control"
+        name="username"
+        placeholder="Username"
+      />
+    </div>
+    <div class="mb-3">
+      <input
+        type="password"
+        class="form-control"
+        name="password"
+        placeholder="Password"
+      />
+    </div>
+    <button type="submit" class="btn btn-secondary">Login</button>
   </form>
 </div>
 {% endif %} {% endblock %}
