--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -19,7 +19,7 @@
           <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
         {% else %}
-        <li class="nav-item">
+        <li class="nav-item d-flex">
           <a class="nav-link" href="{% url 'register' %}">Register</a>
         </li>
         <li class="nav-item">
