--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,29 +1,54 @@
-{% extends "base.html" %} {% block content %}
-<div class="col-md-6 offset-md-3">
-  {% if user.is_authenticated %}
-  <h2>Records...</h2>
-  {% if records %} {% for record in records %} {{record}} <br />
-  {% endfor %} {% endif %} {% else %}
-  <h2>Login</h2>
-  <form method="POST" action="{% url 'home' %}">
-    {% csrf_token %}
-    <div class="mb-3">
-      <input
-        type="text"
-        class="form-control"
-        name="username"
-        placeholder="Username"
-      />
-    </div>
-    <div class="mb-3">
-      <input
-        type="password"
-        class="form-control"
-        name="password"
-        placeholder="Password"
-      />
-    </div>
-    <button type="submit" class="btn btn-secondary">Login</button>
-  </form>
-</div>
+{% extends "base.html" %} {% block content %} {% if user.is_authenticated %}
+<h2>Records...</h2>
+<table class="table table-striped table-hover table-bordered table-sm">
+  <thead class="table-dark">
+    <tr>
+      <th scope="col">#.</th>
+      <th scope="col">Name</th>
+      <th scope="col">Email</th>
+      <th scope="col">Phone</th>
+      <th scope="col">Address</th>
+      <th scope="col">City</th>
+      <th scope="col">State</th>
+      <th scope="col">Created At</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% if records %} {% for record in records %}
+    <tr>
+      <td>{{record.id}}</td>
+      <td>{{record.first_name}} {{record.last_name}}</td>
+      <td>{{record.email}}</td>
+      <td>{{record.phone}}</td>
+      <td>{{record.address}}</td>
+      <td>{{record.city}}</td>
+      <td>{{record.state}}</td>
+      <td>{{record.created_at}}</td>
+    </tr>
+    {%endfor %} {% endif %}
+  </tbody>
+</table>
+{% else %}
+<h2>Login</h2>
+<form method="POST" action="{% url 'home' %}">
+  {% csrf_token %}
+  <div class="mb-3">
+    <input
+      type="text"
+      class="form-control"
+      name="username"
+      placeholder="Username"
+    />
+  </div>
+  <div class="mb-3">
+    <input
+      type="password"
+      class="form-control"
+      name="password"
+      placeholder="Password"
+    />
+  </div>
+  <button type="submit" class="btn btn-secondary">Login</button>
+</form>
+
 {% endif %} {% endblock %}
