--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Django - CRM</a>
+    <a class="navbar-brand" href="{% url 'home' %}">Django - CRM</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -16,11 +16,14 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         {% if user.is_authenticated %}
         <li class="nav-item">
+          <a class="nav-link" href="{% url 'add_record' %}">Add Record</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
         {% else %}
         <li class="nav-item d-flex">
-          <a class="nav-link" href="{% url 'register' %}">Register</a>
+          <a class="nav-link" href="{% url 'register' %}">Sign Up</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'home' %}">Login</a>
