--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -14,7 +14,7 @@
       ></button>
     </div>
     {% endif %} {{ form.as_p}}
-    <button type="submit" class="btn btn-secondary">Register</button>
+    <button type="submit" class="btn btn-primary">Register</button>
   </form>
 </div>
 {% endblock %}
