--- a/website/templates/add_record.html
+++ b/website/templates/add_record.html
@@ -4,6 +4,7 @@
   <br />
   <form method="POST" action="{% url 'add_record' %}">
     {% csrf_token %} {{form.as_p}}
+    <a href="{% url 'home' %}" class="btn btn-secondary">Back to List</a>
     <button type="submit" class="btn btn-primary">Add Record</button>
   </form>
 </div>
