--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -3,6 +3,7 @@
 <table class="table table-striped table-hover table-bordered table-sm">
   <thead class="table-dark">
     <tr>
+      <th scope="col">ID</th>
       <th scope="col">Name</th>
       <th scope="col">Email</th>
       <th scope="col">Phone</th>
@@ -10,12 +11,14 @@
       <th scope="col">City</th>
       <th scope="col">State</th>
       <th scope="col">Created At</th>
-      <th scope="col">ID</th>
+      <th scope="col">Actiion</th>
+      <th scope="col">Show</th>
     </tr>
   </thead>
   <tbody>
     {% if records %} {% for record in records %}
     <tr>
+      <td>{{record.id}}</td>
       <td>{{record.first_name}} {{record.last_name}}</td>
       <td>{{record.email}}</td>
       <td>{{record.phone}}</td>
@@ -23,7 +26,20 @@
       <td>{{record.city}}</td>
       <td>{{record.state}}</td>
       <td>{{record.created_at}}</td>
-      <td><a href="{% url 'record' record.id %}">{{record.id}}</a></td>
+      <td>
+        <a
+          href="{% url 'update_record' record.id %}"
+          class="btn btn-outline-secondary btn-sm"
+          >Update</a
+        >
+      </td>
+      <td>
+        <a
+          href="{% url 'record' record.id %}"
+          class="btn btn-outline-secondary btn-sm"
+          >View</a
+        >
+      </td>
     </tr>
     {%endfor %} {% endif %}
   </tbody>
