--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -22,10 +22,9 @@
           <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
         {% else %}
-        <li class="nav-item d-flex">
+        <li class="nav-item d-flex ml-auto">
           <a class="nav-link" href="{% url 'register' %}">Sign Up</a>
         </li>
-
         {% endif %}
       </ul>
     </div>
