--- a/website/templates/record.html
+++ b/website/templates/record.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %} {% block content %}
-
+<div class="col-md-6 offset-md-3">
+<h3 class="display-5">Showing Single Record..</h3>
+<br/>
 <div class="card">
   <div class="card-header card-title">
     <h5 class="card-title">User Information</h5>
@@ -26,4 +28,6 @@
 <a href="{% url 'delete_record' user_record.id %}" class="btn btn-danger"
   >Delete</a
 >
+</form>
+</div>
 {% endblock %}
