--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %} {% block content %} {% if user.is_authenticated %}
-<h2>List Of Records...</h2>
+<h2>
+  List Of Records...
+  <h6>Total Record: {{ records.count }}</h6>
+</h2>
 <table class="table table-striped table-hover table-bordered table-sm">
   <thead class="table-dark">
     <tr>
@@ -29,14 +32,19 @@
       <td>
         <a
           href="{% url 'update_record' record.id %}"
-          class="btn btn-outline-secondary btn-sm"
+          class="btn btn-outline-secondary btn-sm btn-success text-light"
           >Update</a
+        >
+        <a
+          href="{% url 'delete_record' record.id %}"
+          class="btn btn-outline-secondary btn-sm btn-danger text-light"
+          >Delete</a
         >
       </td>
       <td>
         <a
           href="{% url 'record' record.id %}"
-          class="btn btn-outline-secondary btn-sm"
+          class="btn btn-outline-primary btn-sm btn-primary text-light"
           >View</a
         >
       </td>
@@ -48,39 +56,9 @@
 <div class="col-md-6 offset-md-3">
   <br />
   <div class="position-relative m-4">
-    <div
-      class="position-relative py-2 px-4 text-bg-success border border-success rounded-pill"
-    >
-      <svg
-        width="1em"
-        height="1em"
-        viewBox="0 0 16 16"
-        class="position-absolute top-100 start-50 translate-middle"
-        fill="var(--bs-success)"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
-        />
-      </svg>
-    </div>
-    <h1 class="display-3 text-center">Cagta Pro</h1>
-    <div
-      class="position-relative py-2 px-4 text-bg-success border border-success rounded-pill"
-    >
-      <svg
-        width="1em"
-        height="1em"
-        viewBox="0 0 16 16"
-        class="position-absolute top-100 start-50 translate-middle display-5 h2"
-        fill="var(--bs-success)"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
-        />
-      </svg>
-    </div>
+    <h1 class="display-6 text-center">
+      Welcome to Our App <strong>Cagta Pro </strong>
+    </h1>
     <br />
     <br />
     <h2>Login</h2>
@@ -107,5 +85,5 @@
       <button type="submit" class="btn btn-primary">Login</button>
     </form>
   </div>
-  {% endif %} {% endblock %}
 </div>
+{% endif %} {% endblock %}
