--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,6 +2,7 @@
 <h2>
   List Of Records...
   <h6>Total Record: {{ records.count }}</h6>
+  <br />
 </h2>
 <table class="table table-striped table-hover table-bordered table-sm">
   <thead class="table-dark">
@@ -15,7 +16,6 @@
       <th scope="col">State</th>
       <th scope="col">Created At</th>
       <th scope="col">Actiion</th>
-      <th scope="col">Show</th>
     </tr>
   </thead>
   <tbody>
@@ -36,13 +36,6 @@
           >Update</a
         >
         <a
-          href="{% url 'delete_record' record.id %}"
-          class="btn btn-outline-secondary btn-sm btn-danger text-light"
-          >Delete</a
-        >
-      </td>
-      <td>
-        <a
           href="{% url 'record' record.id %}"
           class="btn btn-outline-primary btn-sm btn-primary text-light"
           >View</a
@@ -53,37 +46,102 @@
   </tbody>
 </table>
 {% else %}
-<div class="col-md-6 offset-md-3">
-  <br />
-  <div class="position-relative m-4">
-    <h1 class="display-6 text-center">
-      Welcome to Our App <strong>Cagta Pro </strong>
-    </h1>
-    <br />
-    <br />
-    <h2>Login</h2>
-    <br />
-    <form method="POST" action="{% url 'home' %}">
-      {% csrf_token %}
-      <div class="mb-3">
-        <input
-          type="text"
-          class="form-control"
-          name="username"
-          placeholder="Username"
-        />
+<div class="card text-center">
+  <div class="card-header h5 bg-dark text-light">About Us</div>
+  <div class="card-body">
+    <h5 class="card-title h4">Qaameey Tech Solutions - Profile</h5>
+    <p class="card-text col-md-6 offset-md-3 lead">
+      <strong>Qaameey </strong>is a forward-thinking tech solution company
+      dedicated to delivering innovative and reliable technology services to
+      meet the unique needs of our clients. With a focus on excellence,
+      creativity, and a passion for technology, we strive to empower businesses
+      with cutting-edge solutions..
+    </p>
+  </div>
+</div>
+<br />
+<div class="card">
+  <h5 class="card-header strong h5 text-center bg-dark text-light">
+    Our Services:
+  </h5>
+  <div class="card-body">
+    <h5 class="card-title">What We Do</h5>
+    <div class="accordion" id="accordionPanelsStayOpenExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button
+            class="accordion-button"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseOne"
+            aria-expanded="true"
+            aria-controls="panelsStayOpen-collapseOne"
+          >
+            Web and Mobile Development
+          </button>
+        </h2>
+        <div
+          id="panelsStayOpen-collapseOne"
+          class="accordion-collapse collapse show"
+        >
+          <div class="accordion-body lead">
+            <strong>Mobile and Web Development.</strong> We create responsive
+            and user-friendly websites, tailored to your specific requirements,
+            to help your business thrive in the digital world. Our expert team
+            builds custom mobile applications for both Android and iOS
+            platforms, ensuring a seamless user experience.
+          </div>
+        </div>
       </div>
-      <div class="mb-3">
-        <input
-          type="password"
-          class="form-control"
-          name="password"
-          placeholder="Password"
-        />
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseTwo"
+            aria-expanded="false"
+            aria-controls="panelsStayOpen-collapseTwo"
+          >
+            Software Solution
+          </button>
+        </h2>
+        <div
+          id="panelsStayOpen-collapseTwo"
+          class="accordion-collapse collapse"
+        >
+          <div class="accordion-body lead">
+            <strong>Software Solution.</strong> We offer software development
+            services that streamline your business operations, increase
+            efficiency, and drive growth.
+          </div>
+        </div>
       </div>
-      <br />
-      <button type="submit" class="btn btn-primary">Login</button>
-    </form>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseThree"
+            aria-expanded="false"
+            aria-controls="panelsStayOpen-collapseThree"
+          >
+            IT Consultation
+          </button>
+        </h2>
+        <div
+          id="panelsStayOpen-collapseThree"
+          class="accordion-collapse collapse"
+        >
+          <div class="accordion-body lead">
+            <strong>ICT Consultation.</strong> Qaameey provides professional IT
+            consultation to help you make informed decisions about your
+            technology infrastructure.
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 {% endif %} {% endblock %}
