--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'home' %}">Django - CRM </a>
+    <a class="navbar-brand btn btn-outline-primary" href="{% url 'home' %}"
+      >Django - CRM
+    </a>
     <button
       class="navbar-toggler"
       type="button"
@@ -24,6 +26,9 @@
         {% else %}
         <li class="nav-item d-flex ml-auto">
           <a class="nav-link" href="{% url 'register' %}">Sign Up</a>
+        </li>
+        <li class="nav-item d-flex ml-auto">
+          <a class="nav-link" href="{% url 'login' %}">Login</a>
         </li>
         {% endif %}
       </ul>
